--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-loadable": "^5.5.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
@@ -131,6 +132,7 @@
       "react-app"
     ],
     "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
       [
         "import",
         {
