--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
         "import",
         {
           "libraryName": "antd",
-          "style": "css"
+          "style": true
         }
       ],
       [
