--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.6.2",
+    "rc-tween-one": "^2.6.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
