--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "server": "concurrently \"nodemon server/index.js\" \"npm run start\"",
+    "server": "nodemon server/index.js",
+    "serve": "concurrently \"npm run server\" \"npm run start\"",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
