--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
-    "antd": "^3.10.4",
+    "@types/jest": "^24.0.18",
+    "@types/md5": "^2.1.33",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.3",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/screenfull": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
+    "antd": "^3.23.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -63,7 +73,6 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "prop-types": "^15.6.2",
     "rc-tween-one": "^2.6.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.1.3",
@@ -78,6 +87,7 @@
     "screenfull": "^3.3.3",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
+    "typescript": "^3.6.3",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
     "webpack-dev-server": "^3.1.14",
