--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.tsx linguist-language=typescript
+*.js linguist-language=typescript
 *.css linguist-language=typescript
 *.html linguist-language=typescript
