--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/jest": "^24.0.18",
     "@types/md5": "^2.1.33",
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-redux": "^7.1.3",
     "@types/react-router-dom": "^5.1.0",
     "@types/screenfull": "^4.1.0",
@@ -32,8 +34,9 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "draft-js": "^0.11.4",
     "draft.js": "^0.2.0",
-    "draftjs-to-html": "^0.8.4",
+    "draftjs-to-html": "^0.9.1",
     "es6-promise": "^4.2.5",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.5",
