--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "koa2-cors": "^2.0.6",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "0.4.3",
     "mockjs": "^1.0.1-beta3",
@@ -176,5 +177,8 @@
       ]
     ]
   },
-  "proxy": "http://localhost:3009/rc/serve"
+  "proxy": "http://localhost:3009/rc/serve",
+  "devDependencies": {
+    "antd-dayjs-webpack-plugin": "^0.0.8"
+  }
 }
